Fix alignment of inputs for all inputs

--- a/Client/src/scss/components/_filters.scss
+++ b/Client/src/scss/components/_filters.scss
@@ -25,14 +25,13 @@
         min-width: 100%;
         justify-content: center;
         gap: 50px;
-        height: 100px;
-        margin: 0 !important;
-        padding-bottom: 10px;
+        height: 80px;
+        margin-bottom: 10px;
         .form-control {
             height: 100%;
             flex-direction: column;
             align-items: center;
-            justify-content: space-evenly;
+            justify-content: space-between;
 
             .form-control-label {
                 margin: 0;
